--- a/restaurant/pom.xml
+++ b/restaurant/pom.xml
@@ -6,7 +6,24 @@
 
     <groupId>org.restaurant</groupId>
     <artifactId>restaurant</artifactId>
+    <packaging>war</packaging>
+
     <version>1.0-SNAPSHOT</version>
+
+    <properties>
+        <java.version>14</java.version>
+        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+        <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
+
+        <spring.version>5.2.8.RELEASE</spring.version>
+        <spring.security.version>5.3.3.RELEASE</spring.security.version>
+        <spring-data-jpa.version>2.3.2.RELEASE</spring-data-jpa.version>
+
+        <!--    Tests  -->
+        <junit.jupiter.version>5.6.2</junit.jupiter.version>
+
+    </properties>
+
     <build>
         <plugins>
             <plugin>
