--- a/restaurant/pom.xml
+++ b/restaurant/pom.xml
@@ -109,6 +109,11 @@
 
         <!--Web-->
         <dependency>
+            <groupId>javax.servlet</groupId>
+            <artifactId>jstl</artifactId>
+            <version>1.2</version>
+        </dependency>
+        <dependency>
             <groupId>org.springframework</groupId>
             <artifactId>spring-webmvc</artifactId>
         </dependency>
