--- a/restaurant/pom.xml
+++ b/restaurant/pom.xml
@@ -107,6 +107,19 @@
             <version>${spring.security.version}</version>
         </dependency>
 
+        <!-- Cache -->
+        <dependency>
+            <groupId>javax.cache</groupId>
+            <artifactId>cache-api</artifactId>
+            <version>1.1.0</version>
+        </dependency>
+        <dependency>
+            <groupId>org.ehcache</groupId>
+            <artifactId>ehcache</artifactId>
+            <!--            <scope>runtime</scope>-->
+            <version>3.8.1</version>
+        </dependency>
+
         <!--Web-->
         <dependency>
             <groupId>javax.servlet</groupId>
