--- a/restaurant/pom.xml
+++ b/restaurant/pom.xml
@@ -18,6 +18,7 @@
         <spring.version>5.2.8.RELEASE</spring.version>
         <spring.security.version>5.3.3.RELEASE</spring.security.version>
         <spring-data-jpa.version>2.3.2.RELEASE</spring-data-jpa.version>
+        <tomcat.version>9.0.36</tomcat.version>
 
         <!--    Tests  -->
         <junit.jupiter.version>5.6.2</junit.jupiter.version>
@@ -31,6 +32,8 @@
         <hibernate-validator.version>6.1.5.Final</hibernate-validator.version>
         <javax-el.version>3.0.1-b11</javax-el.version>
 
+        <!--Tools-->
+        <ehcache.version>3.8.1</ehcache.version>
     </properties>
 
     <build>
@@ -169,11 +172,16 @@
             <version>5.2.8.RELEASE</version>
             <scope>test</scope>
         </dependency>
-
         <dependency>
             <groupId>org.springframework.security</groupId>
             <artifactId>spring-security-test</artifactId>
             <version>5.4.0</version>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.assertj</groupId>
+            <artifactId>assertj-core</artifactId>
+            <version>3.12.2</version>
             <scope>test</scope>
         </dependency>
 
