--- a/restaurant/pom.xml
+++ b/restaurant/pom.xml
@@ -157,6 +157,11 @@
             <artifactId>hibernate-jcache</artifactId>
             <version>${hibernate.version}</version>
         </dependency>
+        <dependency>
+            <groupId>org.jsoup</groupId>
+            <artifactId>jsoup</artifactId>
+            <version>1.7.2</version>
+        </dependency>
 
         <!--Test-->
         <dependency>
