--- a/restaurant/pom.xml
+++ b/restaurant/pom.xml
@@ -18,18 +18,25 @@
         <spring.version>5.2.8.RELEASE</spring.version>
         <spring.security.version>5.3.3.RELEASE</spring.security.version>
         <spring-data-jpa.version>2.3.2.RELEASE</spring-data-jpa.version>
+        <jackson-json.version>2.11.1</jackson-json.version>
         <tomcat.version>9.0.36</tomcat.version>
-
-        <!--    Tests  -->
-        <junit.jupiter.version>5.6.2</junit.jupiter.version>
 
         <!-- Logging -->
         <logback.version>1.2.3</logback.version>
         <slf4j.version>1.7.30</slf4j.version>
 
+        <!--DB-->
+        <hsqldb.version>2.5.1</hsqldb.version>
+        <!--    Tests  -->
+        <junit.jupiter.version>5.6.2</junit.jupiter.version>
+        <assertj.version>3.16.1</assertj.version>
+        <hamcrest.version>1.3</hamcrest.version>
+        <json-path.version>2.4.0</json-path.version>
+
         <!-- Hibernate -->
         <hibernate.version>5.4.18.Final</hibernate.version>
         <hibernate-validator.version>6.1.5.Final</hibernate-validator.version>
+        <jsoup.version>1.13.1</jsoup.version>
         <javax-el.version>3.0.1-b11</javax-el.version>
 
         <!--Tools-->
