--- a/restaurant/pom.xml
+++ b/restaurant/pom.xml
@@ -226,6 +226,11 @@
             <version>3.12.2</version>
             <scope>test</scope>
         </dependency>
+        <dependency>
+            <groupId>com.jayway.jsonpath</groupId>
+            <artifactId>json-path</artifactId>
+            <version>2.4.0</version>
+        </dependency>
 
         <!--JSON-->
         <dependency>
