--- a/restaurant/pom.xml
+++ b/restaurant/pom.xml
@@ -199,7 +199,7 @@
         <dependency>
             <groupId>org.junit.jupiter</groupId>
             <artifactId>junit-jupiter-engine</artifactId>
-            <version>${junit.jupiter.version}</version>
+            <version>5.1.0</version>
             <scope>test</scope>
         </dependency>
         <dependency>
